package com.example.personal_budget.enums;

public enum BudgetStatus {
	ON_TRACK,
	NEAR_LIMIT,
	EXCEEDED_LIMIT
}
