package com.example.personal_budget.enums;

public enum CategoryType {
	BUILT_IN,
	CUSTOM
}
