package com.example.personal_budget.enums;

public enum GoalStatus {
    ONTRACK,
    NEARLIMIT,
    EXCEEDED
}
