package com.example.personal_budget.enums;

public enum NotificationEventType {
    GOAL_REMINDER,
	BUDGET_NEAR_LIMIT,
    BUDGET_EXCEEDED
}
