package com.example.personal_budget.enums;

public enum TokenType {
  BEARER
}