package com.example.personal_budget.enums;

public enum TransactionType {
  INCOME,EXPENSE
}
